Fix content alignment.

--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 body {
   max-width: 700px;
   margin: 0 auto;
-  padding: 0 10px;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Ubuntu, "Helvetica Neue", sans-serif;
   color: #333;
   background-color: #fff;
@@ -9,7 +8,7 @@ body {
 
 #banner {
   background-image: url("img/banner.jpeg");
-  background-size: contain;
+  background-size: cover;
   width: 700px;
   height: 233px;
 }
@@ -19,6 +18,10 @@ img#avatar {
   border-radius: 50%;
   border: solid 3px #fff;
   margin: 140px auto auto 25px;
+}
+
+h1, #content {
+  padding: 0 35px;
 }
 
 h1 {
